--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "yargs": "^17.5.1"
   }
 }
